@@ -1,2 +1,0 @@
-#!/usr/bin/env python3
-from beancount.scripts.query import main; main()
