@@ -1,0 +1,2 @@
+#!/usr/bin/env python3
+from beancount.scripts.report import main; main()
